--- a/primer_parcial/index.html
+++ b/primer_parcial/index.html
@@ -25,15 +25,15 @@
         </div>
         <div class="card" id="html">
             <h2>HTML</h2>
-            <p>Lenguaje de marcado con el que declaramos la estructura de una página web...</p>
+            <p>Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
         </div>
         <div class="card" id="tcpip">
             <h2>TCP/IP</h2>
-            <p>Es un conjunto de protocolos que permiten la comunicación entre dispositivos informáticos...</p>
+            <p>TCP/IP (Transmission Control Protocol/Internet Protocol) es un conjunto de protocolos de red que permiten la comunicación entre dispositivos informáticos, incluyendo ordenadores y otros dispositivos, en una red o entre redes, incluyendo la Internet.</p>
         </div>
         <div class="card" id="css">
             <h2>CSS</h2>
-            <p>Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página...</p>
+            <p>Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
         </div>
     </div>
 
