--- a/primer_parcial/html.html
+++ b/primer_parcial/html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer Parcial Desarrollo de Aplicaciones Web</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_html.css">
 </head>
 <body>
     <header>
@@ -19,25 +19,10 @@
     </header>
 
     <div class="content">
-        <div class="card" id="dns">
-            <h2>DNS</h2>
-            <p>Nos permite hablar con los servidores en internet sin necesidad de aprendernos sus direcciones IP.</p>
-            <img src="imagenes/DNS_logo.png" alt="DNS Logo">
-        </div>
         <div class="card" id="html">
             <h2>HTML</h2>
             <p>Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
             <img src="imagenes/64px-HTML5_logo_resized.svg.png" alt="HTML Logo">
-        </div>
-        <div class="card" id="tcpip">
-            <h2>TCP/IP</h2>
-            <p>TCP/IP (Transmission Control Protocol/Internet Protocol) es un conjunto de protocolos de red que permiten la comunicación entre dispositivos informáticos, incluyendo ordenadores y otros dispositivos, en una red o entre redes, incluyendo la Internet.</p>
-            <img src="imagenes/Aha-Soft-Free-Global-Security-Global-Network.512.png" alt="TCP/IP Logo">
-        </div>
-        <div class="card" id="css">
-            <h2>CSS</h2>
-            <p>Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
-            <img src="imagenes/css_logo.png" alt="CSS Logo">
         </div>
     </div>
 
