--- a/primer_parcial/index.html
+++ b/primer_parcial/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Primer Parcial Desarrollo De Aplicaciones Web (Par)</h1>
+        <h2>HTML+CSS</h2>
         <nav>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
