--- a/primer_parcial/css.html
+++ b/primer_parcial/css.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer Parcial Desarrollo de Aplicaciones Web</title>
-    <link rel="stylesheet" href="styles_css.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Primer Parcial Desarrollo De Aplicaciones Web (Par)</h1>
+        <h2>HTML+CSS</h2>
         <nav>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
@@ -19,7 +20,7 @@
     </header>
 
     <div class="content">
-        <div class="card" id="css">
+        <div class="card" id="css_1">
             <h2>CSS</h2>
             <p>Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
             <img src="imagenes/css_logo.png" alt="CSS Logo">
