--- a/primer_parcial/html.html
+++ b/primer_parcial/html.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer Parcial Desarrollo de Aplicaciones Web</title>
-    <link rel="stylesheet" href="styles_html.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Primer Parcial Desarrollo De Aplicaciones Web (Par)</h1>
+        <h2>HTML+CSS</h2>
         <nav>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
@@ -19,7 +20,7 @@
     </header>
 
     <div class="content">
-        <div class="card" id="html">
+        <div class="card" id="html_1">
             <h2>HTML</h2>
             <p>Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
             <img src="imagenes/64px-HTML5_logo_resized.svg.png" alt="HTML Logo">
