--- a/primer_parcial/html.html
+++ b/primer_parcial/html.html
@@ -28,7 +28,7 @@
     </div>
 
     <footer>
-        <p>Desarrollado Por: <strong>Juan Guillermo Quevedo</strong></p>
+        <p>Desarrollado Por: <strong>Juan Guillermo Quevedo Cifuentes</strong></p>
         <p>Universidad de Antioquia</p>
         <p>2024-2</p>
     </footer>
