--- a/primer_parcial/index.html
+++ b/primer_parcial/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Juan Guillermo Quevedo Cifuentes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer Parcial Desarrollo de Aplicaciones Web</title>
+    <meta name="description" content="Primer parcial Desarrollo de Aplicaciones web"
+    <title>Primer Parcial Pagina principal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
