cambios en api y estilos
Se añadio la funcion de ingresar una ubicación en el mapa, pero no se puede probar hasta tener una key propia.
cambio en el estilo de la pagina.

--- a/Proyecto_final/sources/organizar.html
+++ b/Proyecto_final/sources/organizar.html
@@ -36,6 +36,7 @@
             </form>
             <div class="map-container">
                 <h2>Ingresa la ubicación</h2>
+                <input id="location-input" type="text" placeholder="Escribe una ubicación">
                 <div id="map"></div>
             </div>
         </div>
