implementación de "mis eventos" y api maps

--- a/Proyecto_final/sources/organizar.html
+++ b/Proyecto_final/sources/organizar.html
@@ -42,7 +42,8 @@
         </div>
         <button class="mt-10 px-6 py-3 bg-white text-black rounded-full font-bold border border-[#F99E45]">Registrar</button>
     </main>
-    <script src="script.js"></script>
+    <script src="scripts/mapsapi.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbbIi1nr5zsmcCBkm1vHQ259HWy-kwkoM&callback=initMap" async defer></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbbIi1nr5zsmcCBkm1vHQ259HWy-kwkoM&loading=async&libraries=places&callback=initMap"></script>
 </body>
 </html>
