--- a/Proyecto_final/sources/eventos.html
+++ b/Proyecto_final/sources/eventos.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Juan Guillermo Quevedo Cifuentes"/>
-    <meta name="description" content="Proyecto final Desarrollo de Aplicaciones web">
-    <title>MeetupHub</title>
+    <title>Mis Eventos</title>
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="bg-[#1a2641] text-white pt-20">
@@ -25,16 +23,14 @@
         </nav>
     </header>
 
-    <!-- Sección principal -->
-    <main class="flex flex-col md:flex-row justify-center items-center px-6 py-12 md:px-20 lg:px-32">
-        <div class="hero-content max-w-xl mr-0 md:mr-6 mb-6 md:mb-0 text-center md:text-left">
-            <h1 class="text-5xl mb-4">ORGANIZA TU EVENTO</h1>
-            <p class="text-xl mb-6">Esta página web permitirá a los usuarios registrarse para crear, gestionar y participar en eventos de manera sencilla.</p>
-            <a href="#" class="px-6 py-3 bg-[#F99E45] text-black rounded-full font-bold">Descúbrelo</a>
-        </div>
-        <div class="hero-image">
-            <img src="img/logo_meetuphub.png" alt="Logo de MeetupHub" class="w-52 h-auto rounded-lg">
+    <!-- Contenido de la página -->
+    <main class="mt-20 bg-black text-white py-10">
+        <div class="container mx-auto px-6">
+            <h1 class="text-4xl font-bold text-center mb-8">TUS EVENTOS</h1>
+            <div id="eventos-container" class="space-y-8"</div>
         </div>
     </main>
+
+    <script src="scripts/cargarEventos.js"></script>
 </body>
 </html>
