--- a/Proyecto_final/sources/organizar.html
+++ b/Proyecto_final/sources/organizar.html
@@ -14,11 +14,11 @@
             <ul class="flex gap-5">
                 <li><a href="index.html" class="text-white hover:text-[#F99E45]">Inicio</a></li>
                 <li><a href="organizar.html" class="text-white hover:text-[#F99E45]">Organizar Evento</a></li>
-                <li><a href="#" class="text-white hover:text-[#F99E45]">Mis Eventos</a></li>
+                <li><a href="eventos.html" class="text-white hover:text-[#F99E45]">Mis Eventos</a></li>
             </ul>
             <div class="flex gap-3">
-                <a href="#" class="px-5 py-2 bg-[#F99E45] text-white rounded-full">Iniciar Sesión</a>
-                <a href="#" class="px-5 py-2 bg-[#F99E45] text-white rounded-full">Registro</a>
+                <a href="login.html" class="px-5 py-2 bg-[#F99E45] text-white rounded-full">Iniciar Sesión</a>
+                <a href="registro.html" class="px-5 py-2 bg-[#F99E45] text-white rounded-full">Registro</a>
             </div>
         </nav>
     </header>
