--- a/Proyecto_final/sources/eventos.html
+++ b/Proyecto_final/sources/eventos.html
@@ -17,8 +17,8 @@
                 <li><a href="eventos.html" class="text-white hover:text-[#F99E45]">Mis Eventos</a></li>
             </ul>
             <div class="flex gap-3">
-                <a href="#" class="btn px-5 py-2 bg-[#F99E45] text-white rounded-full">Iniciar Sesión</a>
-                <a href="#" class="btn px-5 py-2 bg-[#F99E45] text-white rounded-full">Registro</a>
+                <a href="login.html" class="btn px-5 py-2 bg-[#F99E45] text-white rounded-full">Iniciar Sesión</a>
+                <a href="registro.html" class="btn px-5 py-2 bg-[#F99E45] text-white rounded-full">Registro</a>
             </div>
         </nav>
     </header>
