--- a/Proyecto_final/sources/login.html
+++ b/Proyecto_final/sources/login.html
@@ -35,12 +35,15 @@
                 <input  id="password" type="password" placeholder="******************" class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
             </div>
             <div>
-                <button class="bg-[#F99E45] text-white font-bold py-2 px-4 mb-4 rounded-full" type="button">Ingresar</button>
+                <button id="login-button" class="bg-[#F99E45] text-white font-bold py-2 px-4 mb-4 rounded-full" type="button">Ingresar</button>
             </div>
         </form>
         <p class="mt-4 text-center text-white">
             ¿No tienes cuenta? <a href="registro.html" class="text-[#0EB1D0] hover:underline">Regístrate aquí</a>
         </p>
     </main>
+
+    <script src="scripts/login.js"></script>
+
 </body>
 </html>
