funcionalidad crear evento y verlos
solo falta que al crear eventos se invite a otros usuarios

--- a/Proyecto_final/sources/eventos.html
+++ b/Proyecto_final/sources/eventos.html
@@ -31,6 +31,6 @@
         </div>
     </main>
 
-    <script src="scripts/cargarEventos.js"></script>
+    <script src="scripts/cargarEvento.js"></script>
 </body>
 </html>
