intento fallido de invitar a otros usuarios
se me paso el tiempo y no pude implementar esa ultima función

--- a/Proyecto_final/sources/organizar.html
+++ b/Proyecto_final/sources/organizar.html
@@ -33,6 +33,7 @@
                 <textarea id="descripcion" name="descripcion" placeholder="Escribe la descripción" class="w-full p-4 mb-2 text-black rounded-lg h-28 resize-none" required></textarea>
                 <input id="fecha" name="fecha" type="date" class="w-full p-4 mb-2 text-black rounded-lg" required>
                 <input id="hora" name="hora" type="time" class="w-full p-4 mb-2 text-black rounded-lg" required>
+                <input id="invitados" name="invitados" placeholder="Escribe los correos de los invitados separados por coma" type="text" class="w-full p-4 mb-2 text-black rounded-lg" required>
                 <select id="tipo-evento" name="tipo_evento" class="w-full p-4 mb-2 text-black rounded-lg" required>
                     <option value="">Selecciona el tipo de evento</option>
                     <option value="publico">publico</option>
