--- a/Proyecto_final/sources/eventos.html
+++ b/Proyecto_final/sources/eventos.html
@@ -27,7 +27,7 @@
     <main class="mt-20 bg-black text-white py-10">
         <div class="container mx-auto px-6">
             <h1 class="text-4xl font-bold text-center mb-8">TUS EVENTOS</h1>
-            <div id="eventos-container" class="space-y-8"</div>
+            <div id="eventos-container" class="space-y-8 mb-4"</div>
         </div>
     </main>
 
